--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= theme_code = @current_user.nil? ? 'a' : @current_user.theme.code %>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
   <%= f.input :welcomed, as: :hidden, input_html: { value: true } %>
@@ -8,40 +9,75 @@
       <li><a href="#history" data-ajax="false">History</a></li>
     </ul>
   </div>
-  <div id="profile" class="ui-body-a ui-content">
+  <div id="profile" class="ui-body-<%= theme_code %> ui-content">
 
-<h2>Sign up</h2>
+<h2><%= t 'devise.registrations.signup' %></h2>
 
 
   <div class="form-inputs ui-corner-all custom-corners">
     <div class="ui-bar ui-bar-a">
-      <h3>Enter your account information</h3>
+      <h3><%= t 'devise.registrations.account_info' %></h3>
     </div>
-    <div class="ui-body ui-body-a">
+    <div class="ui-body ui-body-<%= theme_code %>">
       <%= f.input :email, required: true, autofocus: true %>
       <%= f.input :first_name, required: true, autofocus: true %>
       <%= f.input :last_name, required: true, autofocus: true %>
       <%= f.input :password, required: true, autofocus: true %>
     </div>
-    <div class="ui-bar ui-bar-a">
-      <h3>Tell us about yourself</h3>
+
+    <div class='form-inputs ui-corner-all custom-corners'>
+      <div class='ui-bar ui-bar-<%= theme_code %>'>
+        <h3><%= t 'devise.registrations.disp_stgs' %></h3>
+      </div>
+      <%= f.input :timezone, as: :time_zone,
+                  label: t( 'devise.registrations.current_tz' ),
+                  prompt: "Select a timezone",
+                  priority: /US|Seo/ %>
+      <%= f.association :theme,
+                  prompt: "Please choose a UI theme",
+                  label: "What UI theme would you like to use?" %>
+      <%= f.association :language,
+                  collection: Language.supported,
+                  prompt: t( 'devise.registrations.choose_lang',
+                  label: t( 'devise.registrations.lang_quest' ) %>
     </div>
 
+    <div class='ui-corner-all custom-corners'>
+      <div class="ui-bar ui-bar-<%= theme_code %>">
+        <h3>Tell us about yourself</h3>
+        <p><%= t 'devise.registrations.optional_demo' %></p>
+      </div>
 
-    <div class="ui-body ui-body-a">
-      <%= f.association :school, label: "Which school are you currently at?", prompt: "Select a School" %>
 
-      <%= f.association :gender, prompt: "Select a gender" %>
-      <%= f.association :age_range, label: "How old are you?", prompt: "Select an age range" %>
-      <%= f.input :country, as: :country, label: "Where are you from?", prompt: "Select a country",
-            priority: ["United States", "Korea, Republic of" ] %>
-      <%= f.input :timezone, as: :time_zone, label: "What time zone are you in?", prompt: "Select a timezone",
-        priority: /US|Seo/ %>
-      <%= f.association :theme, prompt: "Please choose a UI theme", label: "What UI theme would you like to use?" %>
+      <div class="ui-body ui-body-<%= theme_code %>">
+        <%= f.association :gender, prompt: "Select a gender" %>
+        <%= f.input :date_of_birth, label: t( 'devise.registrations.dob' ) %>
+        <%= f.association :school, label:
+                  t( 'devise.registrations.current_uni' ),
+                  prompt: "Select a School" %>
+        <%= f.input :started_school, prompt: 'When did you begin university?' %>
+        <%= f.input :cip_code, prompt: 'What are you studying?' %>
+        <table width='100%'>
+          <tr>
+            <td width='50%'>
+              <%= select_tag :country,
+                   options_from_collection_for_select( HomeCountry.all, :code, :name ),
+                   :class => 'country_select' %>
+            </td>
+            <td width='50%'>
+                <%= f.input :home_state, 
+                   input_html: { :class => 'select_state' },
+                   prompt: 'Which state are you from?' %>
+            </td>
+          </tr>
+        </table>
+         <%= f.association :primary_language,
+                   prompt: 'What language do you speak at home?' %>
+      </div>
     </div>
   </div>
   </div>
-  <div id="history" class="ui-body-a ui-content">
+  <div id="history" class="ui-body-<%= theme_code %> ui-content">
     <h2>History of Activities in Which You've Taken Part</h2>
     <p>No activities yet</p>
   </div>
