Diversity is nearly working!

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -122,7 +122,7 @@
 </p>
 <p>
   </br></br>
-  <h3><%= t :projects %></h3>
+  <h3><%= t 'projects.projects' %></h3>
   <% if @course.projects.count < 1 %>
     <%= t :no_projects %></br>
   <% else %>
