--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -12,10 +12,10 @@
   <thead>
     <tr>
       <th><%= t :name %></th>
-      <th data-priority="0"><%= t :courses %></th>
+      <th data-priority="0"><%= t 'courses.courses' %></th>
       <th data-priority="1"><%= t :instructors %></th>
       <th data-priority="0"><%= t :students %></th>
-      <th data-priority="1"><%= t :projects %></th>
+      <th data-priority="1"><%= t 'projects.projects' %></th>
       <th data-priority="1"><%= t :exps %></th>
       <th data-priority="1"><%= t :terms_lists %></th>
       <th data-priority="1"><%= t :actions %></th>
