--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -18,7 +18,7 @@
       <th data-priority="1"><%= t :end_date %></th>
       <th data-priority="1"><%= t :instructors %></th>
       <th ><%= t :students %></th>
-      <th data-priority="1"><%= t :projects %></th>
+      <th data-priority="1"><%= t 'projects.projects' %></th>
       <th data-priority="1"><%= t :exps %></th>
       <th data-priority="1"><%= t :terms_lists %></th>
       <th><%= t :actions %></th>
