Cleaning up diversity scores - now for testing

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -50,6 +50,10 @@
                     data: { rel: 'popup', transition: 'flip', position: { to: 'window' } },
                     class: 'ui-btn ui-corner-all ui-shadow ui-btn-inline ui-icon-plus ui-btn-icon-left' %><br />
               <br />
+              <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+              <% end %>
+
               <%= link_to 'Want to change your password? Click here and we''ll email instructions.', initiate_password_reset_path %><br />
             </div>
           <div class="form-inputs ui-corner-all custom-corners">
@@ -58,7 +62,19 @@
             </div>
             <div class="ui-body ui-body-<%= theme_code %>">
             <table width="100%">
-              <tr><% if @current_user.is_instructor? %>
+              <tr>
+                <td colspan='3'>
+                  <%= f.association :theme,
+                          prompt: "Please choose a UI theme",
+                          label: "What UI theme would you like to use?" %>
+                  <%= f.association :language,
+                          collection: Language.supported,
+                          prompt: t( 'devise.registrations.choose_lang' ),
+                          label: t( 'devise.registrations.lang_quest' ) %>
+                </td>
+              </tr>
+              <tr>
+              <% if @current_user.is_instructor? %>
                 <td width="20%">
               <%= f.input :researcher, as: :select,
                           label: "Anonymize names?",
@@ -76,17 +92,6 @@
                           prompt: "Select a timezone", priority: /US|Seo/ %>
                 </td>
               </tr>
-              <tr>
-                <td colspan='3'>
-                  <%= f.association :theme,
-                          prompt: "Please choose a UI theme",
-                          label: "What UI theme would you like to use?" %>
-                  <%= f.association :language,
-                          collection: Language.supported,
-                          prompt: t( 'devise.registrations.choose_lang' ),
-                          label: t( 'devise.registrations.lang_quest' ) %>
-                </td>
-              </tr>
             </table>
             </div>
 
@@ -98,27 +103,31 @@
                 <div class="ui-body ui-body-<%=theme_code %>">
               <%= f.association :school, label: "Which school are you currently at?", prompt: "Select a School" %>
 
-              <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-              <% end %>
-
               <%= f.association :gender, prompt: "Select a gender" %>
               <%= f.input :date_of_birth, as: :date, html5: true,
-                      label: "When were you born?" %>
+                      label: t( 'devise.registrations.dob' ) %>
               <%= f.input :started_school, as: :date, html5: true,
                       prompt: "When did you begin university?" %>
               <%= f.association :cip_code, label: "What are you studying?",
                       prompt: "Choose your course of study" %>
               <table width='100%'>
+                <tr colspan='2'>
+                  <td><%= label_tag :country, t( 'devise.registrations.hometown' ) %><td>
+                </tr>
                 <tr>
                   <td width='50%'>
+                    <% init_country = f.object.home_state.nil? ?
+                      HomeCountry.where( code: '__' ).take :
+                      f.object.home_state.home_country %>
                     <%= select_tag :country,
-                         options_from_collection_for_select( HomeCountry.all, :code, :name ),
+                         options_from_collection_for_select( HomeCountry.all,
+                                    :code, :name, init_country.code  ),
                          :class => 'country_select' %>
                   </td>
                   <td width='50%'>
-                      <%= f.association :home_state, 
-                         prompt: 'Which state are you from?' %>
+                      <%= f.association :home_state,
+                          collection: init_country.home_states,
+                          label: false %>
                   </td>
                 </tr>
               </table>
