--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,16 +29,10 @@
       <div class='ui-bar ui-bar-<%= theme_code %>'>
         <h3><%= t 'devise.registrations.disp_stgs' %></h3>
       </div>
-      <%= f.association :theme,
-                  prompt: "Please choose a UI theme",
-                  label: "What UI theme would you like to use?" %>
+      <%= f.association :theme %>
       <%= f.association :language,
-                  collection: Language.supported,
-                  prompt: t( 'devise.registrations.choose_lang',
-                  label: t( 'devise.registrations.lang_quest' ) %>
+                  collection: Language.supported %>
       <%= f.input :timezone, as: :time_zone,
-                  label: t( 'devise.registrations.current_tz' ),
-                  prompt: "Select a timezone",
                   priority: /US|Seo/ %>
     </div>
 
@@ -50,15 +44,11 @@
 
 
       <div class="ui-body ui-body-<%= theme_code %>">
-        <%= f.association :school,
-                label: t( 'devise.registrations.current_uni' ),
-                prompt: "Select a School" %>
-        <%= f.association :gender, prompt: "Select a gender" %>
-        <%= f.input :date_of_birth, as: :date, html5: true,
-                label: t( 'devise.registrations.dob' ) %>
-        <%= f.input :started_school, as: :date, html5: true,
-                prompt: 'When did you begin university?' %>
-        <%= f.input :cip_code, prompt: 'What are you studying?' %>
+        <%= f.association :school %>
+        <%= f.association :gender %>
+        <%= f.input :date_of_birth, as: :date, html5: true %>
+        <%= f.input :started_school, as: :date, html5: true %>
+        <%= f.input :cip_code %>
         <table width='100%'>
           <tr colspan='2'>
             <td><%= label_tag :country, t( 'devise.registrations.hometown' ) %><td>
@@ -80,8 +70,7 @@
             </td>
           </tr>
         </table>
-         <%= f.association :primary_language,
-                   prompt: 'What language do you speak at home?' %>
+         <%= f.association :primary_language %>
       </div>
     </div>
   </div>
