--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -49,7 +49,7 @@
     <%= label_tag :addresses, t( '.add_instructor_lbl' ) %>
     <%= text_field_tag :addresses %>
     <%= hidden_field_tag :id, @course.id %>
-    <%= submit_tag t( '.add' ) %>
+    <%= submit_tag t( :add ) %>
   <% end %>
   <% @course.rosters.instructorships.each do |roster| %>
     <%= roster.user.name( anonymize ) %></br>
@@ -60,7 +60,7 @@
     <%= label_tag :addresses, t( '.add_student_lbl' ) %>
     <%= text_field_tag :addresses %>
     <%= hidden_field_tag :id, @course.id %>
-    <%= submit_tag t( '.add' ) %>
+    <%= submit_tag t( :add ) %>
   <% end %>
   <% if @course.rosters.students.count > 0 %>
     <p>
