--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,9 +24,9 @@
               <table width="100%">
                 <thead>
                   <tr>
-                    <th>Registered Emails</th>
-                    <th>Primary</th>
-                    <th>Confirmed</th>
+                    <th><%= t 'devise.registrations.reg_emails' %></th>
+                    <th><%= t 'devise.registrations.primary' %></th>
+                    <th><%= t 'devise.registrations.confirmed' %></th>
                     <th><%= t :actions %></th>
                   </tr>
                 </thead>
@@ -38,9 +38,10 @@
                     <td align="center"><%= email.confirmed? ? raw( '&#x2714;' ) : '' %></td>
                     <td align="center">
                       <% if !email.primary %>
-                        <%= link_to 'Remove', remove_registered_email_path( email_id: email.id ) %>
+                        <%= link_to t( :remove ), remove_registered_email_path( email_id: email.id ) %>
                         <% if email.confirmed? %>
-                          | <%= link_to 'Make Primary', set_primary_registered_email_path( email_id: email.id ) %>
+                          | <%= link_to t( 'devise.registrations.make_prim'),
+                                  set_primary_registered_email_path( email_id: email.id ) %>
                         <% end %>
                       <% end %></td>
                   </tr>
@@ -53,10 +54,10 @@
                     class: 'ui-btn ui-corner-all ui-shadow ui-btn-inline ui-icon-plus ui-btn-icon-left' %><br />
               <br />
               <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+                <p><%= t 'devise.registrations.waiting_confirmations' %> <%= resource.unconfirmed_email %></p>
               <% end %>
 
-              <%= link_to 'Want to change your password? Click here and we''ll email instructions.', initiate_password_reset_path %><br />
+              <%= link_to t( 'devise.registrations.password_change' ), initiate_password_reset_path %><br />
             </div>
           <div class="form-inputs ui-corner-all custom-corners">
             <div class="ui-bar ui-bar-<%= theme_code %>">
@@ -93,7 +94,7 @@
 
               <div class="ui-corner-all custom-corners">
                 <div class="ui-bar ui-bar-<%=theme_code %>">
-                  <h3>Tell us about yourself<%= ", " + @current_user.first_name unless @current_user.first_name.nil? %></h3>
+                  <h3><%= t 'devise.registrations.tell_about_personalized', name: (@current_user.first_name unless @current_user.first_name.nil? ) %></h3>
                 </div>
                 <div class="ui-body ui-body-<%=theme_code %>">
               <%= f.association :school %>
@@ -152,10 +153,10 @@
           <tr>
             <th>Activity</th>
             <th data-priority="0"><%= t :course %></th>
-            <th data-priority="0">Type</th>
-            <th data-priority="0">Completion Date</th>
+            <th data-priority="0"><%= t :type %></th>
+            <th data-priority="0"><%= t :completion_date %></th>
             <th data-priority="0"><%= t :status %></th>
-            <th data-priority="1">Other information</th>
+            <th data-priority="1"><%= t :other_info %></th>
           </tr>
         </thead>
       <tbody>
@@ -176,12 +177,13 @@
           <%= activity.candidate_list_for_user( @current_user ).get_concepts.count %> unique concepts
         <% elsif activity.class.name == "Experience" %>
            <% if activity.get_user_reaction( @current_user ).status != "Not started" %>
-             Scenario ID: <%= activity.get_user_reaction( @current_user ).scenario_id %>
+             <%= t 'devise.registrations.scenario_id', 
+                    scenario_id: activity.get_user_reaction( @current_user ).scenario_id %>
            <% else %>
-              You must begin the experience first
+             <%= t 'devise.registrations.experience_not_started' %>
            <% end %>
         <% else %>
-          Coming soon
+          <%= t :coming_soon %>
         <% end %>
         </td>
       </tr>
@@ -193,19 +195,19 @@
 </div>
 
 
-<h3>Cancel my account</h3>
+<h3><%= t 'devise.registrations.cancel_acct_hdg' %></h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= t 'devise.registrations.unhappy' %>
 <div data-role="popup" id="add_address_popup" data-theme="<%= theme_code %>" style="width:700px" 
     class="ui-corner-all">
   <div data-role="header" data-theme="<%= theme_code %>">
-    <h1>What is the new address?</h1>
+    <h1><%= t 'devise.registrations.new_address_prompt' %></h1>
   </div>
   <%= form_tag add_registered_email_path do %>
     <div style="padding:10px 20px;">
-      <%= label_tag :email_address, "New address:" %>
+      <%= label_tag :email_address, t( 'devise.registrations.new_address_lbl' ) %>
       <%= email_field_tag :email_address %><br />
-      <%= submit_tag "Add!" %>
+      <%= submit_tag t( :add ) %>
     </div>
   <% end %>
 </div>
